--- a/nicepage.css
+++ b/nicepage.css
@@ -2003,7 +2003,7 @@ a {
     box-shadow: 5px 5px 20px 0 rgba(var(--black-r),var(--black-g),var(--black-b),0.4);
   }
   .u-block-88b4-35 {
-    padding-top: 20px;
+    padding-top: 40px;
     padding-right: 23px;
     padding-bottom: 30px;
     padding-left: 24px;
